--- a/modules/header/components/search/autocomplete/_autocomplete.scss
+++ b/modules/header/components/search/autocomplete/_autocomplete.scss
@@ -2,12 +2,10 @@ $suggestion-offset: $base-font-size;
 
 .c-autocomplete {
   position: absolute;
-  top: $site-header-search-form-height + $base-whitespace;
-  right: 0;
+  top: $site-header-search-form-height - 1px;
+  right: $site-header-search-form-height + $base-whitespace * .5;
   left: 0;
-  border-width: 0 1px 1px;
-  border-style: solid;
-  border-color: $secondary-gray20;
+  border: 1px solid $secondary-gray20;
   background-color: $primary-light;
   box-shadow: 0 3px 4px 0 $secondary-gray60;
 
